[package]
name = "hex"
version = "0.4.3"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
description = "Encoding and decoding data into/from hexadecimal representation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hex/"
repository = "https://github.com/KokaKiwi/rust-hex"
edition = "2018"
readme = "README.md"
keywords = ["no_std", "hex"]
categories = ["encoding", "no-std"]
rust-version = "1.85"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "etna"]
alloc = []
std = ["alloc"]
serde = ["dep:serde"]
etna = ["std", "dep:proptest", "dep:quickcheck", "dep:crabcheck", "dep:hegeltest", "dep:rand"]

[[bench]]
name = "hex"
harness = false

[[bin]]
name = "etna"
path = "src/bin/etna.rs"
required-features = ["etna"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
proptest = { version = "1", optional = true }
quickcheck = { git = "https://github.com/alpaylan/quickcheck.git", branch = "master", features = ["etna"], optional = true }
crabcheck = { git = "https://github.com/alpaylan/crabcheck.git", branch = "main", optional = true }
hegeltest = { version = "0.3.7", optional = true }
rand = { version = "0.9", optional = true }

[dev-dependencies]
criterion = "0.7.0"
data-encoding = "2.6.0"
rustc-hex = "2.1.0"
faster-hex = "0.10.0"
version-sync = "0.9.5"
pretty_assertions = "1.4.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[package.metadata.docs.rs]
all-features = true
